hover z-index fix

--- a/src/scss/color-swatches.scss
+++ b/src/scss/color-swatches.scss
@@ -67,6 +67,7 @@
     &:hover {
         overflow: visible;
         mask-image: none;
+        z-index: 2;
 
         .color-swatch__value {
             // text-decoration: underline;
